--- a/website/templates/medications.html
+++ b/website/templates/medications.html
@@ -4,7 +4,7 @@
 
 
 
-<div class="title-tab bg-gradient">Patient List</div>
+<!--<div class="title-tab bg-gradient">Patient List</div>-->
 
 <div class="container1">
   <!--SIDE MENU-->
@@ -42,7 +42,7 @@
   <div class="table-box">
     
     
-      <!--PATIENTS TABLE-->
+      <!--MEDICINES TABLE-->
       <table id="medicine-table" class="medicine-tables">
         <thead >
           <th>#</th>
