--- a/website/templates/patientlist.html
+++ b/website/templates/patientlist.html
@@ -2,7 +2,7 @@
 
 {% block content%}
 
-<div class="title-tab bg-gradient">Patient List</div>
+<!--<div class="title-tab bg-gradient">Patient List</div>-->
 
     <div class="container1">
       <!--SIDE MENU-->
