--- a/website/templates/patientstable.html
+++ b/website/templates/patientstable.html
@@ -2,13 +2,12 @@
 <!--PATIENTS TABLE-->
     <table id="patienttable" class="patient-tables">
       <thead >
-        <th>Patient No.</th>
+        <th>Patient Code</th>
         <th>Last Name</th>
         <th>First Name</th>
         <th>Middle Name</th>
         <th>Gender</th>
         <th>Age</th>
-        <th>Contact No.</th>
         <th>Date Added No.</th>
         <th>Actions</th>
       </thead>
@@ -16,13 +15,12 @@
       <tbody>
         {% for x in patientsdata %}
         <tr>
-          <td>{{x.id}}</td>
+          <td>{{x.patient_code}}</td>
           <td>{{x.last_name}}</td>
           <td>{{x.first_name}}</td>
           <td>{{x.middle_name}}</td>
           <td>{{x.gender}}</td>
           <td>{{x.age}}</td>
-          <td>{{x.contact_number}}</td>
           <td>{{x.created_at}}</td>
           <td>
             <a href="{% url 'patientinfo' x.id %}" id="link-view"><i class="bi bi-eye"></i></a>
