--- a/website/templates/sidemenu.html
+++ b/website/templates/sidemenu.html
@@ -2,7 +2,7 @@
     <!--Left Menus-->
     <div class="left-menu">
       <div class="active-title bg-gradient">Patient Records</div>
-      <a href="{% url "patientlist" %}">Patient List</a>
-      <a href="{% url "medications" "#"%}">Medicine List</a>
+      <a href="{% url "patientlist" %}">Patient List</a><hr>
+      <a href="{% url "medications" "#"%}">Medicine List</a><hr>
       <a href="#">Prescriptions</a> 
     </div>
