--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,5 +1,5 @@
 <header class="nav-bar">
-    <a href="/"><strong class="logo-text">LNCRMS</strong></a>
+    <a href="{% url "patientlist" %}"><strong class="logo-text">LNCRMS</strong></a>
     <nav>
         <ul class="nav-links">
             <li><a href="#">Dashboard</a></li>
