--- a/website/templates/patientinfo.html
+++ b/website/templates/patientinfo.html
@@ -57,15 +57,17 @@
   </div>
 
   <div class="details-history">
+    <div style="background-co"
     <div class="phistory-head">
       <div class="lbl-details">Medical History</div>
+      <div class="add-medication"><a href="#"><h4><i class="bi bi-plus-circle-fill"></i></h4></a></div>
     </div>
 
     <div class="medicalhistorytable">
             <!--MEDICINES TABLE-->
-            {% Medhistory patient_record.id as records %}
-            <table id="medicine-table" class="medicine-tables">
-            <thead>
+            {% Medhistory patient_record.patient_code as records %}
+            <table id="table-medications" class="table table-sm table-bordered">
+              <thead class="table-primary">
                 <th>Medical History</th>
                 <th>Date/Time Consulted</th>
             </thead>
@@ -75,14 +77,52 @@
             <td>{{record.remarks}}</td>
             <td>{{record.created_at}}</td>
             </tr>
-            {% endfor %}
-                {% comment %} {% for precord in patient_record %}
-                    <td>{{patient_record.remarks}}</td>
-                    <td>{{patient_record.created_at}}</td>
-                {% endfor %}  {% endcomment %}
+            {% endfor %}             
             </table>
             <!--end of MEDICINES TABLE-->
     </div>
+    <div class="phistory-head">
+      <div class="lbl-details">Medications</div>
+      <div class="add-medication"><a href="#"><h4><i class="bi bi-printer-fill"></i></h4></a></div>
+    </div>
+    
+    <div class="medicalhistorytable">
+    <table id="table-medications" class="table table-sm table-bordered">
+      <thead class="table-primary">
+        <tr>
+        <th rowspan="2">Quantity</th>
+        <th rowspan="2">Medication/Preparation</th>
+        <th rowspan="2">Dosage</th>
+        <th colspan="3">Schedule of Intake</th>
+        </tr>
+        <tr>
+          <th>7:00 AM</th>
+          <th>1:00 PM</th>
+          <th>7:00 PM</th>          
+          </tr>      
+      </thead>
+        
+      <tbody>
+        {% if medicationrecord %}        
+        {% for medrecord in medicationrecord %}
+        <tr>
+        <td>{{medrecord.quantity}}</td>
+        <td>{{medrecord.medicine_name}}</td>
+        <td>{{medrecord.dosage}}</td>
+        <td>{{medrecord.morning}}</td>
+        <td>{{medrecord.noon}}</td>
+        <td>{{medrecord.evening}}</td>                      
+        </tr>
+        {% endfor %}
+        {% else %}
+        <td colspan="6">No current prescription data</td>
+        {% endif %}
+      </tbody>
+
+    </table>
+    </div>
+    
+
   </div>
 </div>
 
