--- a/website/templates/patientinfo.html
+++ b/website/templates/patientinfo.html
@@ -121,7 +121,7 @@
                 </tr>
                 {% endfor %}
                 {% else %}
-                <td colspan="6">No current prescription data</td>
+                <td colspan="6">No current prescription data.</td>
                 {% endif %}
               </tbody>
             </table>    
