--- a/website/templates/medications.html
+++ b/website/templates/medications.html
@@ -10,7 +10,7 @@
   <!--SIDE MENU-->
   {% include "sidemenu.html" %}
 
-  <!--Add new patient form-->
+  <!--Add new medicine form-->
   <div class="reg-area">
     <form method="POST">
       {% csrf_token %}
