--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -31,6 +31,8 @@
       href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css"
     />
 
+
+    
     <!--Custom CSS-->
     <link rel="stylesheet" href="{% static 'style.css' %}" />
 
@@ -75,11 +77,13 @@
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
    
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
     <!-- Data Script-->
     <script>
       $("#patienttable").DataTable({})
       $("#medicine-table").DataTable({})
+    
     </script>
   </body>
 </html>
