--- a/website/templates/patientinfo.html
+++ b/website/templates/patientinfo.html
@@ -57,16 +57,20 @@
   </div>
 
   <div class="details-history">
-    <div style="background-co"
     <div class="phistory-head">
+      
+     
+      {% block title %}
       <div class="lbl-details">Medical History</div>
-      <div class="add-medication"><a href="#"><h4><i class="bi bi-plus-circle-fill"></i></h4></a></div>
+      <div class="add-medication"><a href="{% url "medicalhistorytb" patient_record.id%}"><h4><i class="bi bi-plus-circle-fill"></i></h4></a></div>
+      {% endblock title %}
+      {% block btn-back%}{% endblock  %}
     </div>
 
-
-              <!--MEDICAL RECORD TABLE-->
+            {% block content1 %}
+                 <!--MEDICAL RECORD TABLE-->
               <div class="medicalhistorytable">
-              
+                            
                 {% Medhistory patient_record.patient_code as records %}
                 <table id="table-medications" class="table table-sm table-bordered">
                   <thead class="table-primary">
@@ -76,7 +80,7 @@
                 
                 {% for record in records %}
                 <tr>
-                <td>{{record.remarks}}</td>
+                <td>{{record.remarks}} &nbsp <a class="link link-info" href="{% url "medicalhistoryinfo" 12%}">View</a></td>
                 <td>{{record.created_at}}</td>
                 </tr>
                 {% endfor %}             
@@ -84,7 +88,7 @@
                 </div>
                 <!--end of MEDICAL RECORD TABLE-->
 
-
+                
             <div class="phistory-head">
               <div class="lbl-details">Medications</div>
               <div class="add-medication" ><a href="#"><h4><i class="bi bi-printer-fill"></i></h4></a></div>
@@ -105,7 +109,8 @@
                     <div class="accordion-body">
 
                       <div class="accordion-item">
-                       
+                        <form method="POST" id="additsem-form">
+                          {% csrf_token %}
                               <div class="reg-row">
                                 <div class="medicine-col" style="width:100%;">
                                   <label class="reg-label">Medicine Name</label><br />
@@ -125,13 +130,12 @@
 
                                 <div class="medicine-col">
                                   <label class="reg-label">Quantity</label><br />
-                                  <input class="medicine-input" name="qty" style="width:80%;" required />
+                                  <input class="medicine-input" name="qtyvalue" style="width:80%;" required />
                                 </div>
                             </div>
-
+                              <br>
                         <div class="reg-row" style="padding-top:0px">
-                          <form method="POST" id="additem-form">
-                            {% csrf_token %}
+                          
                             <div class="medicine-col">
                               <label class="reg-label">7AM</label><br />
                               <input class="medicine-input" name="am" required />
@@ -152,10 +156,11 @@
                               <button class="btn-addmed" type="submit" name="addtoprescription">add to prescription</button>
                           
                             </div>
-                          </form>
+                       
                         </div>
 
                       </div>
+                    </form>
                     </div>
                   </div>
               
@@ -164,7 +169,7 @@
             
 
             
-            <!--MEDICAL HISTORY TABLE-->
+            <!--PATIENT PRESCRIPTION TABLE-->
             <div class="medicalhistorytable">
             <table id="table-medications" class="table table-sm table-bordered">
               <thead class="table-primary">
@@ -173,6 +178,7 @@
                 <th rowspan="2">Medication/Preparation</th>
                 <th rowspan="2">Dosage</th>
                 <th colspan="3">Schedule of Intake</th>
+                <th rowspan="2">Actions</th>
                 </tr>
                 <tr>
                   <th>7:00 AM</th>
@@ -189,7 +195,13 @@
                 <td>{{medrecord.dosage}}</td>
                 <td>{{medrecord.morning}}</td>
                 <td>{{medrecord.noon}}</td>
-                <td>{{medrecord.evening}}</td>                      
+                <td>{{medrecord.evening}}</td>  
+                <td>
+                 
+                  <a href="{% url "deleteitemprescription" patient_record.id medrecord.id %}" style="padding:0 10px;margin:0;" name="delete_presciption_item" type='submit' value="{{medrecord.id}}" id="link-delete">
+                    <i class="bi bi-trash3"></i></a>
+                
+                </td>
                 </tr>
                 {% endfor %}
                 {% else %}
@@ -198,7 +210,11 @@
               </tbody>
             </table>    
             </div>
-            <!--END MEDICAL HISTORY TABLE-->
+            <!--end of PATIENT PRESCRIPTION TABLE-->
+            {% endblock content1 %}
+             
+
+
     
 
   </div>
