attachments table added

--- a/website/templates/medicalhistoryinfo.html
+++ b/website/templates/medicalhistoryinfo.html
@@ -2,30 +2,81 @@
 {% extends 'patientinfo.html' %}
 {% load custom_tags %}
 
+{% block btn-back %} <a href="javascript:history.go(-1)">
+    <h4 style="color:black;"><i class="bi bi-arrow-left-square-fill"></i></h4>
+</a>{% endblock btn-back %}
+{% block title %}
+<div class="lbl-details">Patient History Details</div>
 
+{% endblock title %}
+{% block content1 %}
 
- {% block btn-back %} <a href="javascript:history.go(-1)"><h4 style="color:black;"><i class="bi bi-arrow-left-square-fill"></i></h4></a>{% endblock btn-back %}
- {% block title %}
- <div class="lbl-details">Patient History Details</div>
-
- 
- {% endblock title %}
- {% block content1 %}
-
- <div class="add_medicalhistorytable card">
+<div class="add_medicalhistorytable card">
     <label class="lbl-pname2">CONSULTATION DATE/TIME</label><br />
     <label class="value-pname">{{patient_history.created_at}} </label>
-    </div>
-    
+</div>
 
 <div class="add_medicalhistorytable  card">
-<label class="lbl-pname2">DIAGNOSIS</label><br />
-<label class="value-pname">{{patient_history.diagnosis}} </label>
+    <label class="lbl-pname2">DIAGNOSIS</label><br />
+    <label class="value-pname">{{patient_history.diagnosis}} </label>
 </div>
 
 <div class="add_medicalhistorytable  card">
     <label class="lbl-pname2">REMARKS</label><br />
     <label class="value-pname">{{patient_history.remarks}} </label>
-    </div>
-    {% endblock content1 %}
+</div>
 
+<div class="medicalhistorytable">
+     <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#add_attachments">Add attachments</button>
+    
+    <table id="table-medications" class="table table-sm table-bordered">
+        <thead class="table-primary">
+          <th colspan="2">Attachments</th>
+        </thead>
+        <tbody>
+            {% for a in  patient_history_attachments%}
+            <tr>
+                <td>{{a.name}}</td>
+                <td>{{a.fileattachments}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+        </table>
+       
+</div>
+
+
+
+ <!-- Modal -->
+ <div class="modal fade" id="add_attachments" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+
+      <div class="modal-content">
+        <div class="title-form">Upload Attachments </div>
+        <form action="" method="POST" enctype='multipart/form-data'>
+          {% csrf_token %}
+          <div class="reg-row fullwidth" style="padding: 10px;width:100%;">
+            
+            {{form.name}}
+           
+          </div>
+          <div class="reg-row" style="padding: 10px;width:100%;">
+            
+            
+            {{form.fileattachments}}
+          </div>
+
+          <div class="reg-row">
+            <div class="medicine-col">
+
+              <button name="save_attachments" class="btn-save" type="submit" name="update">Save</button>
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+
+            </div>
+          </div>
+        </form>
+      </div>
+
+    </div>
+  </div>
+{% endblock content1 %}
