--- a/website/static/style.css
+++ b/website/static/style.css
@@ -4,7 +4,7 @@
     box-sizing:border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
     
 }
 
@@ -12,7 +12,7 @@ body{
     background-color: #f4f4f4;
 }
 
-li,a,strong, button {
+header li,a,strong, button {
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     font-size: 13px;
@@ -526,7 +526,7 @@ datalist{
     display: flex;
 }
 
-.medicalhistorytable input,textarea,input{
+.medicalhistorytable input,textarea{
     background-color: rgb(250, 255, 189,0.1); 
     display: block;
     width: 100%;
@@ -555,4 +555,11 @@ datalist{
     font-size:13px;
     position: relative;
     color: #01576d;
+}
+
+.fullwidth input{
+    font-size: 15px;
+    margin: 0;
+    padding: 5px;
+    width: 100%;
 }
