--- a/website/templates/medications.html
+++ b/website/templates/medications.html
@@ -65,41 +65,42 @@
               <button name="delete" type='submit' value="{{meds.id}}" id="link-delete"><i class="bi bi-trash3"></i></button>
               </form>
               {% comment %} <button id="link-delete"><i class="bi bi-trash3"></i></button> {% endcomment %}
-              <!-- Modal -->
-      <div class="modal fade" id="{{meds.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-        
-          <div class="modal-content">
-            <div class="title-form bg-gradient">Edit Record</div>
-            <form action="{% url "medications" meds.id %}" method="POST">
-              {% csrf_token %}
-            <div class="reg-row">
-              <div class="medicine-col"  style="width: 35%;" >
-                <label class="reg-label">Medicine #</label><br />
-                <input class="medicine-input" value="{{meds.id}}" name="medID{{meds.id}}" disabled/>
-              </div>
-              <div class="medicine-col">
-                <label class="reg-label">Medicine Name</label><br />
-                <input class="medicine-input" value="{{meds.medicine_name}}" name="medname{{meds.id}}" required/>
-              </div>
-              <div class="medicine-col" style="width: 40%;">
-                <label class="reg-label">Dosage</label><br />
-                <input class="medicine-input" value="{{meds.dosage}}" name="dosage{{meds.id}}" style="width: 90%;" required/>
-              </div>
+   <!-- Modal -->
+  <div class="modal fade" id="{{meds.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+
+      <div class="modal-content">
+        <div class="title-form bg-gradient">Edit Record</div>
+        <form action="{% url "medications" meds.id %}" method="POST">
+          {% csrf_token %}
+          <div class="reg-row">
+            <div class="medicine-col" style="width: 35%;">
+              <label class="reg-label">Medicine #</label><br />
+              <input class="medicine-input" value="{{meds.id}}" name="medID{{meds.id}}" disabled />
+            </div>
+            <div class="medicine-col">
+              <label class="reg-label">Medicine Name</label><br />
+              <input class="medicine-input" value="{{meds.medicine_name}}" name="medname{{meds.id}}" required />
+            </div>
+            <div class="medicine-col" style="width: 40%;">
+              <label class="reg-label">Dosage</label><br />
+              <input class="medicine-input" value="{{meds.dosage}}" name="dosage{{meds.id}}" style="width: 90%;"
+                required />
+            </div>
           </div>
 
           <div class="reg-row">
-              <div class="medicine-col">  
-                      
-                <button class="btn-save" type="submit" name="update">Update</button>
-                 
-              </div>   
+            <div class="medicine-col">
+
+              <button class="btn-save" type="submit" name="update">Update</button>
+
+            </div>
           </div>
         </form>
-          </div>
-          
-        </div>
       </div>
+
+    </div>
+  </div>
                     
                  
      
